<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add_directory"
        android:title="@string/add_directory_title"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_settings_core"
        android:title="@string/preferences_settings"
        android:icon="@drawable/ic_memory"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_input_binding"
        android:icon="@drawable/ic_controller"
        android:title="@string/grid_menu_input_binding"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_combo_key"
        android:icon="@drawable/ic_workspaces"
        android:title="@string/combo_key_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_install_cia"
        android:icon="@drawable/ic_deployed"
        android:title="@string/grid_menu_install_cia"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_multiplayer"
        android:icon="@drawable/ic_groups"
        android:title="@string/multiplayer"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/grid_menu_refresh"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_info"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>
