<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context="org.dolphinemu.dolphinemu.activities.EmulationActivity">

    <item
        android:id="@+id/menu_running_setting"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_settings_core"
        android:title="@string/preferences_settings"/>

    <item
        android:id="@+id/menu_emulation_edit_layout"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_settings_gcpad"
        android:title="@string/emulation_edit_layout"/>

    <item
        android:id="@+id/menu_emulation_camera"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_screenshot"
        android:title="@string/menu_emulation_camera"/>

    <item
        android:id="@+id/menu_screen_rotation"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_screen_rotation"
        android:title="@string/emulation_screen_rotation"/>

    <item
        android:id="@+id/menu_cheat_code"
        app:showAsAction="never"
        android:title="@string/menu_cheat_code"/>

    <item
        android:id="@+id/menu_mem_region"
        app:showAsAction="never"
        android:title="@string/emulation_memory_search"/>

</menu>
